Final edits up to GIS

--- a/html_outputs/index.html
+++ b/html_outputs/index.html
@@ -794,11 +794,11 @@ a column separator --></p>
 <ul>
 <li>Visit our <a href="http://www.appliedepi.org"><strong>website</strong></a> and <a href="https://forms.gle/9awNd8syypTSYUsn7"><strong>join our contact list</strong></a><br>
 </li>
-<li><strong>contact@appliedepi.org</strong>, tweet <a href="https://twitter.com/appliedepi"><strong>@appliedepi</strong></a>, or <a href="www.linkedin.com/company/appliedepi"><strong>LinkedIn</strong></a><br>
+<li><strong>contact@appliedepi.org</strong>, tweet <a href="https://twitter.com/appliedepi"><strong>@appliedepi</strong></a>, or <a href="https://www.linkedin.com/company/appliedepi"><strong>LinkedIn</strong></a><br>
 </li>
 <li>Submit issues to our <a href="https://github.com/appliedepi/epiRhandbook_eng"><strong>Github repository</strong></a></li>
 </ul>
-<p><strong>We offer live R training</strong> from instructors with decades of applied epidemiology experience - <a href="www.appliedepi.org/live">www.appliedepi.org/live</a>.</p>
+<p><strong>We offer live R training</strong> from instructors with decades of applied epidemiology experience - <a href="https://appliedepi.org/live/">www.appliedepi.org/live</a>.</p>
 </div>
 </div>
 <form target="_blank" action="https://www.paypal.com/donate" method="post">
@@ -1463,7 +1463,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","loop":false,"closeEffect":"zoom","openEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"loop":false,"openEffect":"zoom","selector":".lightbox","closeEffect":"zoom","descPosition":"bottom"});
 (function() {
   let previousOnload = window.onload;
   window.onload = () => {
