Updates to make sure github issues have been addressed

--- a/html_outputs/new_pages/r_projects.html
+++ b/html_outputs/new_pages/r_projects.html
@@ -289,7 +289,7 @@ cookieconsent.run({
       <a href="../">The Epidemiologist R Handbook</a> 
         <div class="sidebar-tools-main tools-wide">
     <a href="https://twitter.com/appliedepi" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-twitter"></i></a>
-    <a href="https://www.linkedin.com/company/appliedepi/" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-linkedin"></i></a>
+    <a href="https://www.linkedin.com/company/appliedepi" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-linkedin"></i></a>
     <a href="https://github.com/appliedepi/epihandbook_eng" title="Source Code" class="quarto-navigation-tool px-1" aria-label="Source Code"><i class="bi bi-github"></i></a>
     <div class="dropdown">
       <a href="" title="Share" id="quarto-navigation-tool-dropdown-0" class="quarto-navigation-tool dropdown-toggle px-1" data-bs-toggle="dropdown" aria-expanded="false" role="link" aria-label="Share"><i class="bi bi-share"></i></a>
@@ -759,25 +759,17 @@ cookieconsent.run({
 </header>
 
 
-<p>An R project enables your work to be bundled in a portable, self-contained folder. Within the project, all the relevant scripts, data files, figures/outputs, and history are stored in sub-folders and importantly - the <em>working directory</em> is the project’s root folder.</p>
+<p>An R project enables your work to be bundled in a portable, self-contained folder. Within the project, all the relevant scripts, data files, figures/outputs, and history are stored in sub-folders. Importantly - the “working directory” of the R session is the project’s root folder.</p>
+<p>Host one discrete work project within one R project (e.g.&nbsp;one outbreak, or analysis).</p>
 <section id="suggested-use" class="level2" data-number="6.1">
 <h2 data-number="6.1" class="anchored" data-anchor-id="suggested-use"><span class="header-section-number">6.1</span> Suggested use</h2>
-<p>A common, efficient, and trouble-free way to use R is to combine these 3 elements. One discrete work project is hosted within one R project. Each element is described in the sections below.</p>
+<p>A common, efficient, and trouble-free way to use R is to combine these 3 elements. Each element is described in the sections below.</p>
 <ol type="1">
-<li>An <strong>R project</strong>.
-<ul>
-<li>A self-contained working environment with folders for data, scripts, outputs, etc.<br>
+<li><strong>An R project</strong> - A self-contained working environment that enables the use of file paths written relative to its root folder. See <a href="../new_pages/importing.html">Import and export</a> for more information.<br>
 </li>
-</ul></li>
-<li>The <strong>here</strong> package for relative filepaths.
-<ul>
-<li>Filepaths are written relative to the root folder of the R project - see <a href="../new_pages/importing.html">Import and export</a> for more information.<br>
+<li><strong>The <em>rio</em> package</strong> - Its functions <code>import()</code> and <code>export()</code> that handle any file type by its extension (e.g.&nbsp;.csv, .xlsx, .png).<br>
 </li>
-</ul></li>
-<li>The <strong>rio</strong> package for importing/exporting.
-<ul>
-<li><code>import()</code> and <code>export()</code> handle any file type by by its extension (e.g.&nbsp;.csv, .xlsx, .png).</li>
-</ul></li>
+<li><strong>The <em>here</em> package</strong> - Its function <code>here()</code> allows easy creation of file paths, including within automated reports.</li>
 </ol>
 <!-- ======================================================= -->
 </section>
@@ -1451,7 +1443,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","openEffect":"zoom","closeEffect":"zoom","loop":false});
+<script>var lightboxQuarto = GLightbox({"selector":".lightbox","closeEffect":"zoom","descPosition":"bottom","openEffect":"zoom","loop":false});
 (function() {
   let previousOnload = window.onload;
   window.onload = () => {
