Initial updates following Neale's review

--- a/html_outputs/new_pages/collaboration.html
+++ b/html_outputs/new_pages/collaboration.html
@@ -289,7 +289,7 @@ cookieconsent.run({
       <a href="../">The Epidemiologist R Handbook</a> 
         <div class="sidebar-tools-main tools-wide">
     <a href="https://twitter.com/appliedepi" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-twitter"></i></a>
-    <a href="https://www.linkedin.com/company/appliedepi/" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-linkedin"></i></a>
+    <a href="https://www.linkedin.com/company/appliedepi" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-linkedin"></i></a>
     <a href="https://github.com/appliedepi/epihandbook_eng" title="Source Code" class="quarto-navigation-tool px-1" aria-label="Source Code"><i class="bi bi-github"></i></a>
     <div class="dropdown">
       <a href="" title="Share" id="quarto-navigation-tool-dropdown-0" class="quarto-navigation-tool dropdown-toggle px-1" data-bs-toggle="dropdown" aria-expanded="false" role="link" aria-label="Share"><i class="bi bi-share"></i></a>
@@ -1236,7 +1236,7 @@ cookieconsent.run({
 <section id="in-rstudio-3" class="level4 unnumbered">
 <h4 class="unnumbered anchored" data-anchor-id="in-rstudio-3">In Rstudio</h4>
 <p><em>PULL</em> - First, click the “Pull” icon (downward arrow) which fetches and pulls at the same time.</p>
-<p><em>PUSH</em> - Clicking the green “Pull” icon (upward arrow). You may be asked to enter your Github username and password. The first time you are asked, you may need to enter two Git command lines into the <em>Terminal</em>:</p>
+<p><em>PUSH</em> - Clicking the green “Push” icon (upward arrow). You may be asked to enter your Github username and password. The first time you are asked, you may need to enter two Git command lines into the <em>Terminal</em>:</p>
 <ul>
 <li><strong>git config –global user.email “<a href="mailto:you@example.com" class="email">you@example.com</a>”</strong> (your Github email address), and<br>
 </li>
@@ -2214,7 +2214,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"selector":".lightbox","closeEffect":"zoom","openEffect":"zoom","loop":false,"descPosition":"bottom"});
+<script>var lightboxQuarto = GLightbox({"openEffect":"zoom","descPosition":"bottom","selector":".lightbox","closeEffect":"zoom","loop":false});
 (function() {
   let previousOnload = window.onload;
   window.onload = () => {
