--- a/html_outputs/new_pages/quarto.html
+++ b/html_outputs/new_pages/quarto.html
@@ -740,7 +740,7 @@ cookieconsent.run({
 </ol>
 <section id="why-quarto-over-r-markdown" class="level2" data-number="44.1">
 <h2 data-number="44.1" class="anchored" data-anchor-id="why-quarto-over-r-markdown"><span class="header-section-number">44.1</span> Why Quarto over R Markdown?</h2>
-<p>Quarto provides the flexibility and automation that R Markdown pioneered, with a more powerful underlying flexibility that streamlines a lot of the sharing and publishing processes of your work! While R Markdown is tied to R, Quarto documents allow you to use a number of different programming languages such as R, Python, Javascript and Julia. This means that if you are working with people writing in several different coding languages, they can all use the same document to carry out their analysis.</p>
+<p>Quarto provides the flexibility and automation that R Markdown pioneered, with a more powerful underlying flexibility that streamlines a lot of the sharing and publishing processes of your work! While R Markdown is tied to R, Quarto documents allow you to use a number of different programming languages such as R, Python, Javascript and Julia. While R Markdown <a href="https://bookdown.org/yihui/rmarkdown/language-engines.html">can do this</a>, the approach is less straightforward. By streamlining the inclusion of multiple programming languages, it makes collaborating across different people and groups, easier if multiple approaches are used.</p>
 <p>Even if you are only working in R, Quarto has several advantages. Rather than relying on individual packages to create different outputs, Quarto handles this all internally. To produce a website, PowerPoint slides, or a html report, rather than using external packages, Quarto has this functionality inbuilt. This means you have fewer packages to update, and if one of the packages is no longer maintained, you don’t need to change your approach to maintain the same output.</p>
 <p>Quarto also has the advantage of providing a way to render multiple files at the same time, and combine them when wanted. The Epi R Handbook is written as several individual Quarto files, and then combined to make this website!</p>
 <p>If you are thinking of moving over from R Markdown to Quarto, don’t worry, you won’t have to re-write every R Markdown document to move over to Quarto! Quarto documents follow the same syntax and commands as Rmarkdown. Previous scripts in R Markdown can generally be moved over to Quarto without changing any of your code!</p>
@@ -1436,7 +1436,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"loop":false,"descPosition":"bottom","openEffect":"zoom","selector":".lightbox","closeEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"loop":false,"descPosition":"bottom","closeEffect":"zoom","selector":".lightbox","openEffect":"zoom"});
 (function() {
   let previousOnload = window.onload;
   window.onload = () => {
