Updates following comments

--- a/html_outputs/new_pages/errors.html
+++ b/html_outputs/new_pages/errors.html
@@ -252,7 +252,7 @@ cookieconsent.run({
       <a href="../">The Epidemiologist R Handbook</a> 
         <div class="sidebar-tools-main tools-wide">
     <a href="https://twitter.com/appliedepi" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-twitter"></i></a>
-    <a href="https://www.linkedin.com/company/appliedepi/" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-linkedin"></i></a>
+    <a href="https://www.linkedin.com/company/appliedepi" title="" class="quarto-navigation-tool px-1" aria-label=""><i class="bi bi-linkedin"></i></a>
     <a href="https://github.com/appliedepi/epihandbook_eng" title="Source Code" class="quarto-navigation-tool px-1" aria-label="Source Code"><i class="bi bi-github"></i></a>
     <div class="dropdown">
       <a href="" title="Share" id="quarto-navigation-tool-dropdown-0" class="quarto-navigation-tool dropdown-toggle px-1" data-bs-toggle="dropdown" aria-expanded="false" role="link" aria-label="Share"><i class="bi bi-share"></i></a>
@@ -788,7 +788,7 @@ i Input `age_cat` is `replace_na(age_cat, "Missing")`.invalid factor level, NA g
 <p><code>Error: Insufficient values in manual scale. 3 needed but only 2 provided.</code></p>
 <p>You may have supplied too few values for the color scale, make sure you have the same number of colors as values in your plot. Consider checking whether <code>NA</code> is a factor level in your dataset.</p>
 <pre><code>Can't add x object</code></pre>
-<p>This is likely a ggplot error from the use of <code>scale_fill_manual()</code>, where you have not provided enough colors for the number of unique values. If the column is class factor, consider whether <code>NA</code> is a factor level.</p>
+<p>You probably have an extra <code>+</code> at the end of a ggplot command that you need to delete.</p>
 </section>
 <section id="r-markdown-errors" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="r-markdown-errors">R Markdown errors</h3>
